added import and changed toList()